--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "@angular/router": "^14.2.0",
     "@capacitor/android": "^4.6.1",
     "@capacitor/core": "^4.6.1",
+    "@syncfusion/ej2-angular-inputs": "^20.4.42",
     "html2canvas": "^1.4.1",
     "html2pdf.js": "^0.10.1",
     "jspdf": "^2.5.1",
     "rxjs": "~7.5.0",
+    "signature_pad": "^4.1.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
